--- a/voila_widget.ipynb
+++ b/voila_widget.ipynb
@@ -33,8 +33,8 @@
    "outputs": [],
    "source": [
     "import pathlib\n",
-    "temp = pathlib.PosixPath\n",
-    "pathlib.PosixPath = pathlib.WindowsPath"
+    "#temp = pathlib.PosixPath\n",
+    "#pathlib.PosixPath = pathlib.WindowsPath"
    ]
   },
   {
@@ -44,7 +44,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "path = Path('C:\\\\Users\\\\Alison.OShea\\\\Anaconda3\\\\Projects\\\\FastBook')"
+    "path = Path()"
    ]
   },
   {
