--- a/voila_widget.ipynb
+++ b/voila_widget.ipynb
@@ -20,7 +20,7 @@
     }
    ],
    "source": [
-    "!pip install -Uqq fastbook\n",
+    "!pip install -Uqq --no-warn-conflicts fastbook\n",
     "from fastbook import *\n",
     "from fastai.vision.widgets import *"
    ]
