--- a/voila_widget.ipynb
+++ b/voila_widget.ipynb
@@ -32,7 +32,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pathlib\n",
+    "#import pathlib\n",
     "#temp = pathlib.PosixPath\n",
     "#pathlib.PosixPath = pathlib.WindowsPath"
    ]
