--- a/voila_widget.ipynb
+++ b/voila_widget.ipynb
@@ -237,8 +237,8 @@
    ],
    "source": [
     "#hide\n",
-    "!pip install voila\n",
-    "!jupyter serverextension enable --sys-prefix voila "
+    "#!pip install voila\n",
+    "#!jupyter serverextension enable --sys-prefix voila "
    ]
   },
   {
