--- a/voila_widget.ipynb
+++ b/voila_widget.ipynb
@@ -155,7 +155,7 @@
    ],
    "source": [
     "#hide_output\n",
-    "VBox([widgets.Label('Select your image!'), \n",
+    "VBox([widgets.Label('Select an image to upload and I will tell you if it is of Cork city or of county Cork!'), \n",
     "      btn_upload, btn_run, out_pl, lbl_pred])"
    ]
   },
